# gtd

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
.cursor/skills/: SUPERPOWERS_VERSION
docs/agents/: issue-tracker.md
docs/superpowers/plans/: 2026-07-01-inbox-quadrant-classify.md
docs/superpowers/specs/: 2026-07-01-inbox-quadrant-classify-design.md
gtd/: db.py  main.py  models.py  settings.py
gtd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gtd/channels/: api.py  feishu.py
gtd/engine/: clarify.py  classify.py  llm.py  prompts.py
gtd/templates/: actions.html  base.html  done.html  inbox.html  projects.html  reference.html  someday.html  waiting.html
tests/: test_clarify_quadrant.py  test_classify.py  test_llm.py
